--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,10 +1,11 @@
 .content-cards {
     background: #F7F7F7;
     border-radius: 25px;
-    margin:30px;
+    margin:auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-content: space-between;
     padding-left: 0px;
+    width: 95%;
 }
