--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,5 +1,18 @@
+* {
+  box-sizing: border-box;
+}
+
+html, body, 
+#root,
 .App {
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.App {
+  text-align: center;  
 }
 
 .App-logo {
@@ -35,4 +48,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.app-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;  
+  justify-content: space-between;
+}
+
+main {
+  flex-grow: 1;
 }
