--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -1,5 +1,6 @@
 .kasa-banner {
-    margin: 30px;
+    padding: 30px;
+    margin-bottom: 30px;
     display: flex;
     justify-content: space-between;
 }
