--- a/src/Styles/SectionValue.css
+++ b/src/Styles/SectionValue.css
@@ -21,7 +21,6 @@
     text-align: start;
 }
 
-.container-vector{
-    transform: rotate(180deg);
-    transition: all 0.3s ease-out;
+.title-sectionValue {
+    cursor: pointer;
 }
