--- a/src/Styles/Card.css
+++ b/src/Styles/Card.css
@@ -1,3 +1,15 @@
+.content-cards {
+    background: #F7F7F7;
+    border-radius: 25px;
+    margin:auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-between;
+    padding-left: 0px;
+    width: 95%;
+}
+
 .card {
     width: 300px;
     height:300px;
