--- a/src/Styles/Appart.css
+++ b/src/Styles/Appart.css
@@ -1,13 +1,7 @@
-.container-pictures{
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-    height: 400px;
-    border-radius: 25px;
-}
-
-.container-pictures img{
-    /* position: relative; */
+.container-pictures {
+    width: 95%;
+    height:280px;
+    margin: 0 auto;
 }
 
 .container-topLevel{
@@ -81,4 +75,22 @@ ul{
 
 .star{
     width: 25%;  
+}
+
+/* media queries */
+
+@media (min-width:100px) and (max-width:992px)
+{
+   .container-topLevel {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 0 auto;
+        width: 95%;
+   }
+
+   .hostRating {
+    display: flex;
+    flex-direction: row-reverse
+   }
 }
