--- a/src/Styles/Appart.css
+++ b/src/Styles/Appart.css
@@ -1,7 +1,7 @@
 .container-pictures {
     width: 95%;
-    height:280px;
-    margin: 0 auto;
+    height:400px;
+    margin: 30px;
 }
 
 .container-topLevel{
@@ -55,13 +55,19 @@ ul{
     overflow: hidden;
 }
 
-.container-collapse{
+.appart-collapse{  
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
-.appart-collapse{
-    width: 45%;
+.appart-collapse>.container-value{
+    width: 50%;
+}
+
+.container-value {
+    width: 95%;
+    margin: 30px;
 }
 
 .li-equip{
