--- a/src/Styles/Slider.css
+++ b/src/Styles/Slider.css
@@ -6,7 +6,7 @@
     align-items: center;
     overflow: hidden;
     border-radius: 10px;
-    margin: auto;
+    width: 100%;
 }
 
 .vectorLeft,
@@ -24,3 +24,11 @@
 .vectorRight{
     right: 0;
 }
+
+.slide{
+    width:100%;
+}
+
+/* .content{
+    box-sizing: content-box;
+} */
