--- a/src/Styles/NotFound.css
+++ b/src/Styles/NotFound.css
@@ -13,3 +13,12 @@
     text-decoration: underline;
     color:#FF6060;
 }
+
+
+/* media query */
+
+@media (min-width:300px) and (max-width:580px){
+    .notfound {
+        margin: 20px;
+    }
+}
