--- a/src/Styles/Slider.css
+++ b/src/Styles/Slider.css
@@ -26,5 +26,17 @@
 }
 
 .slide{
-    width:100%;
+    width: 100%;
+   
+}
+
+
+/* Media queries */
+@media (min-width:100px) and (max-width:992px){
+
+    .slide{
+        height: 100%;
+        object-fit: cover;
+    }
+
 }
